objects/UnitTestUtilities__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to help make code coverage easier.</description>
    <fields>
        <fullName>UnitTestAccountId__c</fullName>
        <label>UnitTestAccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestContactId__c</fullName>
        <label>UnitTestContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestLead__c</fullName>
        <label>UnitTestLead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestOppRecordTypeId__c</fullName>
        <label>UnitTestOppRecordTypeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestOpportunityRecordTypeIDT1T2__c</fullName>
        <label>UnitTestOpportunityRecordTypeIDT1T2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestPBEidT1T2__c</fullName>
        <label>UnitTestPBEidT1T2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestPBEidWeb__c</fullName>
        <label>UnitTestPBEidWeb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestPBEid__c</fullName>
        <label>UnitTestPBEid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestPriceBookIdT1T2__c</fullName>
        <label>UnitTestPriceBookIdT1T2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestPriceBookId__c</fullName>
        <label>UnitTestPriceBookId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestProduct2IdT1T2__c</fullName>
        <label>UnitTestProduct2IdT1T2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestProduct2IdWeb__c</fullName>
        <label>UnitTestProduct2IdWeb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestProduct2Id__c</fullName>
        <label>UnitTestProduct2Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestProjectRecordTypeImp__c</fullName>
        <label>UnitTestProjectRecordTypeImp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitTestProjectRecordTypeWeb__c</fullName>
        <label>UnitTestProjectRecordTypeWeb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>UnitTestUtilities</label>
</CustomObject>